--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 :root {
@@ -51,6 +50,10 @@ nav a:hover {
     margin: 5rem;
 }
 
+.grafico {
+    margin-top: 3rem;
+}
+
 .graficos-container__texto {
     font-size: 1.3rem;
     text-align: center;
@@ -73,4 +76,3 @@ footer {
     height: 3rem;
     margin-top: 2rem;
 }
-
